fix image size on mobile

--- a/style.scss
+++ b/style.scss
@@ -280,6 +280,7 @@ nav {
   }
 
   img {
+      width: 100%;
       max-width: 720px;
   }
 }
